--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
     <section class="position-relative z-0 heroSection">
         <div class="heroSection">
             <div class="row container m-auto">
-                <div class="col-8 col-md-4 col-lg-2 row m-auto p-0 box">
-                    <div class="heroSmallImage border">
-                        <div class="col-12">
-                            <img src="./images/hero/ensegiseLife.png" alt="energiseLife" class="w-100 h-100">
+                <div class="col-8 col-md-4 col-lg-3 row m-auto p-0 box">
+                    <div class="heroSmallImage border col-12 d-flex flex-column align-items-center ">
+                        <div>
+                            <img src="./images/hero/ensegiseLife.png" alt="energiseLife" class="w-50">
                         </div>
                         <h4>Energise your life</h4>
                         <p>Long established fact that</p>
                     </div>
-                    <div class="heroSmallImage border">
-                        <div class="col-12">
-                            <img src="./images/hero/flower.png" alt="flower" class="w-100 h-100">
+                    <div class="heroSmallImage border col-12">
+                        <div>
+                            <img src="./images/hero/flower.png" alt="flower" class="w-50">
                         </div>
                         <h4>Faith in Action, Love in Motion</h4>
                     </div>
                 </div>
 
                 <div class="col-8 col-md-4 col-lg-6 jesusImage m-auto">
-                    <img src="./images/hero/jesus.png" alt="jesus" class="w-100 h-100">
+                    <img src="./images/hero/jesus.png" alt="jesus" class="w-100">
                 </div>
 
-                <div class="col-8 col-md-4 col-lg-2 row m-0 box p-0 gap-3 m-auto">
+                <div class="col-8 col-md-4 col-lg-3 row m-0 box p-0 gap-3 m-auto">
                     <div class="col-12 heroSmallImage border">
-                        <img src="./images/hero/viewStory.png" alt="viewStory" class="w-100 h-100">
+                        <img src="./images/hero/viewStory.png" alt="viewStory" class="w-75">
                     </div>
                     <div class="col-12">
                         <h2>Spirituality souls</h2>
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="faithMotion container-lg row m-auto bg-white">
+        <!-- <div class="faithMotion container-lg row m-auto bg-white">
             <div class="donateImage accordion mb-2 col-3 col-sm-2 col-lg-1 mx-auto "><img src="./images/hero/donate.png"
                     alt="donate" class="w-100 h-100"></div>
             <div class="row col-12 m-0">
@@ -63,7 +63,7 @@
                     <p>Explore our trust score & customer.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <!-- call Price section -->
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 d-flex flex-column gap-3 gap-lg-5">
-                    <h2 class="sectionHeading ps-2">We Call Price The Lord</h2>
+                    <h2 class="sectionHeading ps-3">We Call Price The Lord</h2>
                     <p>A long established fact that a reader will be distracted by the readable content of a page when
                         looking.
                     </p>
@@ -123,7 +123,7 @@
     <section class="my-5 pageMargin">
         <div class="row">
             <div class="col-12 col-md-6 mx-auto order-2 order-md-1">
-                <h2 class="sectionHeading ps-2 mt-4 mt-md-0">
+                <h2 class="sectionHeading ps-3 mt-4 mt-md-0">
                     Faithful hearts, compassionate hands
                 </h2>
                 <p class="my-4">A long established fact that a reader will be distracted by the readable content of a
@@ -154,10 +154,10 @@
                     sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your
                     temple. mosque, kneel in your
                     “I love you when you bow in your .</p>
-                <button class="btn btn-dark unleashPotentialButton">Read More</button>
+                <button class="btn btn-dark buttonWidth">Read More</button>
             </div>
             <div class="col-12 col-sm-6 d-flex flex-column gap-4 order-0 order-sm-1">
-                <h2 class="sectionHeading ps-2">Unleash Your Potential of About Us</h2>
+                <h2 class="sectionHeading ps-3">Unleash Your Potential of About Us</h2>
                 <p>A long established fact that a reader will be distracted by the readable content of a page when
                     looking.A long established fact that a reader will be distracted by the readable content of a page
                     when looking.</p>
@@ -171,7 +171,7 @@
     <section class="pageMargin mission">
         <div>
             <div class="row mx-0 my-5">
-                <h2 class="sectionHeading ps-2 col-12 col-sm-6 my-auto">Your satisfaction is our mission</h2>
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Your satisfaction is our mission</h2>
                 <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0">A long established fact that a reader will be distracted
                     by the readable
                     content of a page when looking.A long established fact that.A long .</p>
@@ -220,6 +220,266 @@
                     <div>
                         <span class="d-none readMore">Read More</span>
                         <img src="./images/mission/arrow.svg" alt="arrow">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- member section -->
+
+    <section class="pageMargin member">
+        <div>
+            <div class="row mx-0 my-5">
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Feel god closer to your members</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0">A long established fact that a reader will be distracted
+                    by the readable content of a page when looking.A long established fact that.A long.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card border-0 col-6 col-md-3">
+                <div class="mb-4">
+                    <img src="./images/members/vonda.png" alt="man" class="w-100">
+                </div>
+                <div class="d-flex gap-2 justify-content-center">
+                    <div class="d-none d-lg-block ">
+                        <img src="./images/members/share.png" alt="share">
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="card-title">Vonda Sande</h4>
+                        <p>Sir Gerry Serrano</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card border-0 col-6 col-md-3">
+                <div class="mb-4">
+                    <img src="./images/members/ronnie.png" alt="man" class="w-100">
+                </div>
+                <div class="d-flex gap-2 justify-content-center">
+                    <div class="d-none d-lg-block">
+                        <img src="./images/members/share.png" alt="share">
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="card-title">Ronnie Ferrel</h4>
+                        <p>Sir Gerry Serrano</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card border-0 col-6 col-md-3">
+                <div class="mb-4">
+                    <img src="./images/members/lorri.png" alt="man" class="w-100">
+                </div>
+                <div class="d-flex gap-2 justify-content-center">
+                    <div class="d-none d-lg-block">
+                        <img src="./images/members/share.png" alt="share">
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="card-title">Lori Vega</h4>
+                        <p>Sir Gerry Serrano</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card border-0 col-6 col-md-3">
+                <div class="mb-4">
+                    <img src="./images/members/annie.png" alt="man" class="w-100">
+                </div>
+                <div class="d-flex gap-2 justify-content-center">
+                    <div class="d-none d-lg-block">
+                        <img src="./images/members/share.png" alt="share">
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="card-title">Annie Trevin</h4>
+                        <p>Sir Gerry Serrano</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex flex-column align-items-center gap-5">
+            <button class="btn btn-dark p-3 mt-4">ALL TEAM MEMBERS</button>
+            <img src="./images/members/backgroundDesign.png" alt="background" class="d-none d-md-block ">
+        </div>
+    </section>
+
+    <!-- events section -->
+
+    <section class="pageMargin">
+        <div>
+            <div class="row mx-0 my-5">
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">See our all Events</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0">A long established fact that a reader will be distracted
+                    by the readable content of a page when looking.</p>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-lg-4 mt-5">
+                    <div class="card p-0">
+                        <div class="card-img position-relative">
+                            <img src="./images/event/faithful-heart.png" alt="peptization" class="w-100" />
+                            <span class="calendar d-inline-block position-absolute bg-dark">
+                                <img src="./images/event/calendar.svg" alt="calendar" />
+                            </span>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="bold-content">26.10.2013</h6>
+                            <div class="d-flex gap-3 gap-sm-1 gap-md-5 flex-row flex-sm-column flex-md-row my-3">
+                                <div>
+                                    <img src="./images/event/time.svg" alt="clock" />
+                                    <span class="content">12:00 am</span>
+                                </div>
+                                <div>
+                                    <img src="./images/event/location.svg" alt="clock" />
+                                    <span class="content">Kingdom Church</span>
+                                </div>
+                            </div>
+                            <h5 class="card-title card-heading">
+                                Faithful Hearts, Boundless Grace.
+                            </h5>
+                            <p class="card-text content">
+                                long established fact that a reader will be distracted by the
+                                readable
+                            </p>
+                            <a href="#" class="btn btn-dark px-4 py-2">Join Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 mt-5">
+                    <div class="card p-0">
+                        <div class="card-img position-relative">
+                            <img src="./images/event/building-faith.png" alt="anchor" class="w-100" />
+                            <span class="calendar d-inline-block position-absolute bg-dark">
+                                <img src="./images/event/calendar.svg" alt="calendar" />
+                            </span>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="bold-content">26.10.2013</h6>
+                            <div class="d-flex gap-3 gap-sm-1 gap-md-5 flex-row flex-sm-column flex-md-row my-3">
+                                <div>
+                                    <img src="./images/event/time.svg" alt="clock" />
+                                    <span class="content">12:00 am</span>
+                                </div>
+                                <div>
+                                    <img src="./images/event/location.svg" alt="clock" />
+                                    <span class="content">Kingdom Church</span>
+                                </div>
+                            </div>
+                            <h5 class="card-title card-heading">
+                                Building Faith, Serving Humanity.
+                            </h5>
+                            <p class="card-text content">
+                                long established fact that a reader will be distracted by the
+                                readable
+                            </p>
+                            <a href="#" class="btn btn-dark px-4 py-2">Join Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 mt-5">
+                    <div class="card p-0">
+                        <div class="card-img position-relative">
+                            <img src="./images/event/together-faith.png" alt="book" class="w-100" />
+                            <span class="calendar d-inline-block position-absolute bg-dark">
+                                <img src="./images/event/calendar.svg" alt="calendar" />
+                            </span>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="bold-content">26.10.2013</h6>
+                            <div class="d-flex gap-3 gap-sm-1 gap-md-5 flex-row flex-sm-column flex-md-row my-3">
+                                <div>
+                                    <img src="./images/event/time.svg" alt="clock" />
+                                    <span class="content">12:00 am</span>
+                                </div>
+                                <div>
+                                    <img src="./images/event/location.svg" alt="clock" />
+                                    <span class="content">Kingdom Church</span>
+                                </div>
+                            </div>
+                            <h5 class="card-title card-heading">
+                                Together in Faith, United in Love.
+                            </h5>
+                            <p class="card-text content">
+                                long established fact that a reader will be distracted by the
+                                readable
+                            </p>
+                            <a href="#" class="btn btn-dark px-4 py-2">Join Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- latest article section -->
+
+    <section class="pageMargin">
+        <div>
+            <div class="row mx-0 my-5">
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Our latest articles</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0">A long established fact that a reader will be distracted
+                    by the readable content of a page when looking.A long established fact that.A long.</p>
+            </div>
+            <div class="d-flex flex-column flex-lg-row gap-4">
+                <div class="position-relative">
+                    <div>
+                        <img src="./images/article/growing.png" alt="growing Together" class="w-100 h-100">
+                    </div>
+                    <div class="p-4 d-flex flex-column gap-2 articleImageContent position-absolute rounded-3">
+                        <h6>FEATURED</h6>
+                        <h4>Growing Together in God's Word</h4>
+                        <p>A long established fact that a reader will be distracted by the readable content of...</p>
+                        <span>6 Mar,2023</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column justify-content-around gap-3 border p-4 rounded-3 ">
+                    <h4>Subscribe to church</h4>
+                    <p>A long established fact that a reader will be distracted by the readable.A long.</p>
+                    <input type="email" placeholder="Enter your email" class="p-2">
+                    <button class="btn btn-dark rounded-3 p-3 buttonWidth"> Subscribe</button>
+                    <div class="d-flex gap-3">
+                        <input type="checkbox">I agree that my sub minted data is being collected and stored
+                    </div>
+                </div>
+            </div>
+            <div class="mt-5 d-flex justify-content-around ">
+                <div class="card" style="width: 18rem;">
+                    <img src="./images/article/baptism.png" class="card-img-top" alt="baptism">
+                    <div class="card-body">
+                        <h4 class="card-title">Baptism Sunday of church</h4>
+                        <p class="card-text">Sir Gerry Serrano A long established fact that a reader will be distracted
+                            by the readable content of...</p>
+                        <div>
+                            <img src="./images/article/baptismGirl.png" alt="girl">
+                            <span>- 2 min read</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="./images/article/baptismRed.png" class="card-img-top" alt="baptism">
+                    <div class="card-body">
+                        <h4 class="card-title">Baptism Sunday of church</h4>
+                        <p class="card-text">Sir Gerry Serrano A long established fact that a reader will be distracted
+                            by the readable content of...</p>
+                        <div>
+                            <img src="./images/article/baptismGirl.png" alt="girl">
+                            <span>- 4 min read</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="./images/article/baptismBlack.png" class="card-img-top" alt="baptism">
+                    <div class="card-body">
+                        <h4 class="card-title">Baptism Sunday of church</h4>
+                        <p class="card-text">Sir Gerry Serrano A long established fact that a reader will be distracted
+                            by the readable content of...</p>
+                        <div>
+                            <img src="./images/article/baptismBlackGirl.png" alt="girl">
+                            <span>- 2 min read</span>
+                        </div>
                     </div>
                 </div>
             </div>
