--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shrine Page</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
@@ -67,8 +67,8 @@
     </section>
 
     <!-- call Price section -->
-    <section class="callPriceSection pageMargin">
-        <div class="d-flex flex-column gap-5">
+    <section class="callPriceSection pageMargin container">
+        <div class="d-flex flex-column ">
             <div class="row">
                 <div class="churchWomanImages col-12 col-lg-6 d-flex flex-column flex-sm-row gap-2 gap-xl-4">
                     <div class="ms-sm-auto "><img class="w-100 h-100" src="./assets/images/callPrice/church.png" alt="church">
@@ -78,8 +78,8 @@
                 </div>
                 <div class="col-12 col-lg-6 d-flex flex-column gap-3 gap-lg-5 mt-5">
                     <div class="d-flex flex-column gap-3 gap-lg-5">
-                        <h2 class="sectionHeading ps-3"></h2>
-                        <p class="subHeading"></p>
+                        <h2 class="sectionHeading ps-3">We call price the lord</h2>
+                        <p class="subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking.</p>
                     </div>
                     <div class="d-flex flex-column gap-5">
                         <div class="d-flex flex-column flex-sm-row gap-4">
@@ -119,11 +119,11 @@
 
     <!-- faithful hearts -->
 
-    <section class="pageMargin">
+    <section class="pageMargin container">
         <div class="row">
             <div class="col-12 col-md-6 mx-auto order-2 order-md-1">
-                <h2 class="sectionHeading ps-3 mt-4 mt-md-0"></h2>
-                <p class="my-4 subHeading"></p>
+                <h2 class="sectionHeading ps-3 mt-4 mt-md-0">Faithful hearts, compassionate hands</h2>
+                <p class="my-4 subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking</p>
                 <div><img src="./assets/images/faithfulHearts/famousQuote.png" alt="quote"></div>
                 <p class="my-4">“I love you when you bow in your mosque, kneel in your temple, pray in your church. For
                     you and I are
@@ -139,7 +139,7 @@
 
     <!-- unleash potential section -->
 
-    <section class="pageMargin">
+    <section class="pageMargin container">
         <div class="row">
             <div class="col-12 col-sm-6 d-flex flex-column gap-3 order-1 order-sm-0">
                 <div class="unleashPotentialChurch">
@@ -152,8 +152,8 @@
                 <button class="btn btn-dark buttonWidth">Read More</button>
             </div>
             <div class="col-12 col-sm-6 d-flex flex-column gap-4 order-0 order-sm-1">
-                <h2 class="sectionHeading ps-3 "></h2>
-                <p class="subHeading"></p>
+                <h2 class="sectionHeading ps-3 ">Unleash the potential of About us</h2>
+                <p class="subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking.A long established fact that a reader will be distracted by the readable content of a page when looking.</p>
                 <img src="./assets/images/unleashPotential/glass.png" alt="glass" class="class=" w-100 h-100"">
             </div>
         </div>
@@ -161,11 +161,11 @@
 
     <!-- our mission section -->
 
-    <section class="pageMargin mission">
+    <section class="pageMargin container mission">
         <div>
             <div class="row mx-0 my-5">
-                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto"></h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading"></p>
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Your satisfaction is our mission</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking.A long established fact that.A long</p>
             </div>
             <div class="d-flex flex-column flex-sm-row overflow-x-scroll missionCardCollection">
                 <div
@@ -219,12 +219,12 @@
 
     <!-- our work section -->
 
-    <section class="pageMargin">
+    <section class="pageMargin container">
         <div class="row m-0s">
             <div class="col-12 col-sm-8 row order-1 order-sm-0 m-0">
                 <div class="col-12 col-md-8 d-flex flex-column  gap-3">
-                    <h2 class="sectionHeading ps-3 my-3"></h2>
-                    <p class="subHeading">
+                    <h2 class="sectionHeading ps-3 my-3">Growing Stronger in God's our work</h2>
+                    <p class="subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking.A long established fact that a reader will be distracted by the readable.</p>
                     <div>
                         <div>
                             <input type="checkbox">
@@ -257,14 +257,14 @@
 
     <!-- member section -->
 
-    <section class="pageMargin member">
+    <section class="pageMargin container member">
         <div>
             <img src="./assets/images/members/backgroundCrown.png" alt="crown" class="m-auto d-none d-sm-block">
         </div>
         <div>
             <div class="row mx-0 my-5">
-                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto"></h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading">
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Feel god closer to your members</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking.A long established fact that.A long.</p>
             </div>
         </div>
         <div class="row memberCardContainer">
@@ -282,11 +282,11 @@
 
     <!-- events section -->
 
-    <section class="pageMargin">
+    <section class="pageMargin container">
         <div>
             <div class="row mx-0 mb-5">
-                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto"></h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading"></p>
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">See our all Events</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking.</p>
             </div>
             <div class="d-flex gap-3 eventCardContainer overflow-x-scroll">
             </div>
@@ -303,11 +303,11 @@
 
     <!-- latest article section -->
 
-    <section class="pageMargin">
+    <section class="pageMargin container">
         <div>
             <div class="row mx-0 my-5">
-                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto"></h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading"></p>
+                <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Our latest articles</h2>
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading">A long established fact that a reader will be distracted by the readable content of a page when looking.A long established fact that.A long.</p>
             </div>
             <div class="d-flex flex-column flex-md-row gap-4 ">
                 <div class="position-relative">
@@ -340,6 +340,6 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-    <script type="module" src="/index.js"></script>
+    <script type="module" src="/frontend/script.js"></script>
 </body>
 </html>
