feat: added subscribe feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-12 row mt-4 mx-auto ">
                     <button class="btn btn-dark buttonWidth col-sm-3 mb-3 mb-sm-0">Learn More</button>
-                    <div class="col-sm-7 ms-auto p-0 handImage">
+                    <div class="col-sm-6 ms-auto p-0 handImage">
                         <img src="http://127.0.0.1:3000/assets/home/ourWork/cross.png" alt="hand" class="w-100 h-100">
                     </div>
                 </div>
@@ -335,8 +335,8 @@
                 <div class="d-flex flex-column justify-content-around gap-3 border p-4 rounded-3 ">
                     <h4 class="cardHeading">Subscribe to church</h4>
                     <p class="content">A long established fact that a reader will be distracted by the readable.A long.</p>
-                    <input type="email" placeholder="Enter your email" class="p-2">
-                    <button class="btn btn-dark rounded-3 p-3 buttonWidth"> Subscribe</button>
+                    <input type="email" placeholder="Enter your email" class="p-2 churchSubscribeEmail">
+                    <button class="btn btn-dark rounded-3 p-3 buttonWidth churchSubscribeButton"> Subscribe</button>
                     <div class="d-flex gap-3">
                         <input type="checkbox">
                         <span class="content">I agree that my sub minted data is being collected and stored</span>
