--- a/frontend/pages/aboutUs.html
+++ b/frontend/pages/aboutUs.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About US</title>
     <link rel="stylesheet" href="../styles/aboutUs.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
+
 <body>
-    
+    <section class="container my-5">
+        <div class="row">
+            <div class="col-12 col-lg-6 mb-5 mb-lg-0">
+                <img src="http://127.0.0.1:3000/assets/aboutUs/hero/house.png" alt="house" class="w-100">
+            </div>
+            <div class="col-12 col-lg-4 mx-auto d-flex flex-column justify-content-around ">
+                <h2>About us</h2>
+                <div>
+                    <p class="mb-4">There are many variations of passages of Lorem Ipsum available, but the majority
+                        have suffered
+                        alteration in some form, by injected humour, </p>
+                    <p>or randomised words which don't look even slightly believable. If you are going to use</p>
+                </div>
+                <div>
+                    <div class="mb-4">
+                        <input type="checkbox">
+                        <span>nam sagittis leo quis sem eleifend, si</span>
+                    </div>
+                    <div>
+                        <input type="checkbox">
+                        <span>Give each team a Bible verse or story.</span>
+                    </div>
+                </div>
+                <button class="btn btn-dark p-3 mt-3 mt-lg-0">Learn More</button>
+            </div>
+        </div>
+        <div class="heroStats d-flex justify-content-around bg-body-secondary p-5 my-5">
+            <div>
+                <h4>300+</h4>
+                <span>New volunteer</span>
+            </div>
+            <div>
+                <h4>88+</h4>
+                <span>Church Location</span>
+            </div>
+            <div>
+                <h4>$86M+</h4>
+                <span>Managed donations</span>
+            </div>
+            <div>
+                <h4>480+</h4>
+                <span>New member</span>
+            </div>
+        </div>
+    </section>
+    <section class="container">
+        <div class="row m-0">
+            <h2 class="col-4">walking together,growing in faith</h2>
+            <p class="col-4">A long established fact that a reader will be distracted by the readable content of a page when looking.A
+                long established fact that.A long.</p>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
