feat : added aboutUs and FAQ section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,8 @@
                 <div class="col-8 col-md-4 col-lg-3 row m-auto p-0 gap-3 gap-md-0">
                     <div class="heroSmallImage border col-12 d-flex flex-column text-center py-3">
                         <div>
-                            <img src="http://127.0.0.1:3000/assets/home/hero/ensegiseLife.png" alt="energiseLife" class="w-50">
+                            <img src="http://127.0.0.1:3000/assets/home/hero/ensegiseLife.png" alt="energiseLife"
+                                class="w-50">
                         </div>
                         <h4 class="cardHeading">Energise your life</h4>
                         <p class="content">Long established fact that</p>
@@ -38,13 +39,14 @@
                     <img src="http://127.0.0.1:3000/assets/home/hero/jesus.png" alt="jesus" class="w-100">
                 </div>
 
-                <div class="col-8 col-md-4 col-lg-3 row m-0  p-0 gap-3 m-auto">
+                <div class="col-8 col-md-4 col-lg-3 row m-0  p-0 gap-5 m-auto">
                     <div class="col-12 heroCrownLady border">
-                        <img src="http://127.0.0.1:3000/assets/home/hero/viewStory.png" alt="viewStory" class="w-75">
+                        <img src="http://127.0.0.1:3000/assets/home/hero/viewStory.png" alt="viewStory" class="w-75 ">
                     </div>
                     <div class="col-12 mb-5 mb-md-0">
                         <h2 class="boldContent">Spirituality souls</h2>
-                        <p class="content">Long established fact that a reader will be distracted by the readable content of a page.</p>
+                        <p class="content">Long established fact that a reader will be distracted by the readable
+                            content of a page.</p>
                     </div>
                 </div>
             </div>
@@ -53,13 +55,14 @@
             <div class="donateImage accordion mb-2 col-3 col-sm-2 col-lg-1 mx-auto "><img
                     src="http://127.0.0.1:3000/assets/home/hero/donate.png" alt="donate" class="w-100 h-100"></div>
             <div class="row col-12 m-0">
-                <h3 class="col-12 col-md-4 mx-auto mb-auto heroTitle cardHeading"><span>Faith </span>in Action Love in Motion</h3>
+                <h3 class="col-12 col-md-4 mx-auto mb-auto heroTitle cardHeading"><span>Faith </span>in Action Love in
+                    Motion</h3>
                 <p class="col-12 col-md-4 mx-auto content">Long established fact that a reader will be distracted by the
                     readable content of a
                     page when.Long
                     established fact that a reader will be distracted by the readable content.</p>
                 <div class="col-12 col-md-4 mx-auto heroRating">
-                    <h2 >4.8/4</h2>
+                    <h2>4.8/4</h2>
                     <p class="content">Explore our trust score & customer.</p>
                 </div>
             </div>
@@ -71,22 +74,24 @@
         <div class="d-flex flex-column">
             <div class="row">
                 <div class="churchWomanImages col-12 col-lg-6 d-flex flex-column flex-sm-row gap-2 gap-xl-4">
-                    <div class="w-100 h-100"><img class="w-100" src="http://127.0.0.1:3000/assets/home/callPrice/church.png"
-                            alt="church">
+                    <div class="w-100 h-100"><img class="w-100"
+                            src="http://127.0.0.1:3000/assets/home/callPrice/church.png" alt="church">
                     </div>
-                    <div class="w-100 h-100"><img class="w-100" src="http://127.0.0.1:3000/assets/home/callPrice/ladies.png"
-                            alt="woman">
+                    <div class="w-100 h-100"><img class="w-100"
+                            src="http://127.0.0.1:3000/assets/home/callPrice/ladies.png" alt="woman">
                     </div>
                 </div>
                 <div class="col-12 col-lg-5 d-flex flex-column gap-3 gap-lg-5 mt-5 ms-auto">
                     <div class="d-flex flex-column gap-3 gap-lg-5 ms-auto">
                         <h2 class="sectionHeading ps-3">We call price the lord</h2>
-                        <p class="subHeading content">A long established fact that a reader will be distracted by the readable
+                        <p class="subHeading content">A long established fact that a reader will be distracted by the
+                            readable
                             content of a page when looking.</p>
                     </div>
                     <div class="d-flex flex-column gap-5 ">
                         <div class="d-flex flex-column flex-sm-row gap-4">
-                            <div class="mb-3"><img src="http://127.0.0.1:3000/assets/home/callPrice/placeOfHeaven.png" alt="church small">
+                            <div class="mb-3"><img src="http://127.0.0.1:3000/assets/home/callPrice/placeOfHeaven.png"
+                                    alt="church small">
                             </div>
                             <div class="d-flex flex-column ">
                                 <h4 class="cardHeading">Place Of Heaven Church In Earth</h4>
@@ -104,14 +109,15 @@
                     </div>
                 </div>
             </div>
-            <div class="callPriceJoinusSection d-flex flex-column gap-3 gap-md-0 flex-md-row mt-4 justify-content-around  align-items-md-center  w-100">
+            <div
+                class="callPriceJoinusSection d-flex flex-column gap-3 gap-md-0 flex-md-row mt-4 justify-content-around  align-items-md-center  w-100">
                 <div class="callPriceImages d-flex">
                     <img class="ms-0" src="http://127.0.0.1:3000/assets/home/buildingBridges/youngLady.png" alt="lady">
                     <img src="http://127.0.0.1:3000/assets/home/buildingBridges/boy.png" alt="boy">
                     <img src="http://127.0.0.1:3000/assets/home/buildingBridges/oldLady.png" alt="old lady">
                     <img src="http://127.0.0.1:3000/assets/home/buildingBridges/boyLaughing.png" alt="boy">
                 </div>
-                <h4 class="bridgesOfFaith">Building Bridges of faith,reaching Hearts With Love.</h4>
+                <h4 class="bridgesOfFaith">Building Bridges of faith,reaching <br> Hearts With Love.</h4>
                 <div>
                     <button class="callPriceButton">Join us</button>
                 </div>
@@ -125,14 +131,17 @@
         <div class="row m-0">
             <div class="col-12 col-md-6 mx-auto order-2 order-md-1 my-auto">
                 <h2 class="sectionHeading ps-3 mt-4 mt-md-0">Faithful hearts, compassionate hands</h2>
-                <p class="my-4 subHeading content">A long established fact that a reader will be distracted by the readable
+                <p class="my-4 subHeading content">A long established fact that a reader will be distracted by the
+                    readable
                     content of a page when looking</p>
                 <div><img src="http://127.0.0.1:3000/assets/home/faithfulHearts/famousQuote.png" alt="quote"></div>
-                <p class="my-4 content">“I love you when you bow in your mosque, kneel in your temple, pray in your church. For
+                <p class="my-4 content">“I love you when you bow in your mosque, kneel in your temple, pray in your
+                    church. For
                     you and I are
                     sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your
                     temple.</p>
-                <h4><img src="http://127.0.0.1:3000/assets/home/faithfulHearts/quote.png" alt="quote"> Martin Luther</h4>
+                <h4><img src="http://127.0.0.1:3000/assets/home/faithfulHearts/quote.png" alt="quote"> Martin Luther
+                </h4>
             </div>
             <div class="col-8 col-md-5 col-lg-4 mx-auto order-1 order-md-2">
                 <img src="http://127.0.0.1:3000/assets/home/faithfulHearts/bible.png" alt="bible" class="w-100">
@@ -146,9 +155,11 @@
         <div class="row">
             <div class="col-12 col-sm-6 d-flex flex-column gap-3 order-1 order-sm-0">
                 <div class="unleashPotentialChurch">
-                    <img src="http://127.0.0.1:3000/assets/home/unleashPotential/oldChurch.png" alt="oldChurch" class="w-100 h-100">
+                    <img src="http://127.0.0.1:3000/assets/home/unleashPotential/oldChurch.png" alt="oldChurch"
+                        class="w-100 h-100">
                 </div>
-                <p class="content">“I love you when you bow in your mosque, kneel in your temple, pray in your church. For you and I are
+                <p class="content">“I love you when you bow in your mosque, kneel in your temple, pray in your church.
+                    For you and I are
                     sons of one religion, and it is the spirit”“I love you when you bow in your mosque, kneel in your
                     temple. mosque, kneel in your
                     “I love you when you bow in your .</p>
@@ -156,10 +167,12 @@
             </div>
             <div class="col-12 col-sm-6 d-flex flex-column gap-4 order-0 order-sm-1">
                 <h2 class="sectionHeading ps-3 ">Unleash the potential of About us</h2>
-                <p class="subHeading content">A long established fact that a reader will be distracted by the readable content
+                <p class="subHeading content">A long established fact that a reader will be distracted by the readable
+                    content
                     of a page when looking.A long established fact that a reader will be distracted by the readable
                     content of a page when looking.</p>
-                <img src="http://127.0.0.1:3000/assets/home/unleashPotential/glass.png" alt="glass" class="class=" w-100 h-100"">
+                <img src="http://127.0.0.1:3000/assets/home/unleashPotential/glass.png" alt="glass" class="class=" w-100
+                    h-100"">
             </div>
         </div>
     </section>
@@ -170,7 +183,8 @@
         <div>
             <div class="row mx-0 my-5">
                 <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Your satisfaction is our mission</h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader will be
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader
+                    will be
                     distracted by the readable content of a page when looking.A long established fact that.A long</p>
             </div>
             <div class="d-flex flex-column flex-sm-row overflow-x-scroll missionCardCollection">
@@ -199,7 +213,8 @@
                 </div>
                 <div class="p-5 missionCard d-flex flex-column gap-3 align-items-center">
                     <div class="cardImage">
-                        <img src="http://127.0.0.1:3000/assets/home/mission/councelling.svg" alt="counselling" class="h-100">
+                        <img src="http://127.0.0.1:3000/assets/home/mission/councelling.svg" alt="counselling"
+                            class="h-100">
                     </div>
                     <h4 class="cardHeading">Our Counselling</h4>
                     <p class="content text-center">A long established fact that a reade.</p>
@@ -230,7 +245,8 @@
             <div class="col-12 col-sm-8 row order-1 order-sm-0 m-0">
                 <div class="col-12 col-md-8 d-flex flex-column  gap-3">
                     <h2 class="sectionHeading ps-3 my-3">Growing Stronger in God's our work</h2>
-                    <p class="subHeading content">A long established fact that a reader will be distracted by the readable
+                    <p class="subHeading content">A long established fact that a reader will be distracted by the
+                        readable
                         content of a page when looking.A long established fact that a reader will be distracted by the
                         readable.</p>
                     <div>
@@ -267,12 +283,14 @@
 
     <section class="pageMargin container member">
         <div>
-            <img src="http://127.0.0.1:3000/assets/home/members/backgroundCrown.png" alt="crown" class="m-auto d-none d-sm-block">
+            <img src="http://127.0.0.1:3000/assets/home/members/backgroundCrown.png" alt="crown"
+                class="m-auto d-none d-sm-block">
         </div>
         <div>
             <div class="row mx-0 my-5">
                 <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Feel god closer to your members</h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader will be
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader
+                    will be
                     distracted by the readable content of a page when looking.A long established fact that.A long.</p>
             </div>
         </div>
@@ -285,7 +303,8 @@
                 <button class="btn btn-dark p-3 mt-4">ALL TEAM MEMBERS</button>
                 <hr class="mt-auto mb-0 d-none d-md-block">
             </div>
-            <img src="http://127.0.0.1:3000/assets/home/members/backgroundDesign.png" alt="background" class="d-none d-md-block ">
+            <img src="http://127.0.0.1:3000/assets/home/members/backgroundDesign.png" alt="background"
+                class="d-none d-md-block ">
         </div>
     </section>
 
@@ -295,16 +314,17 @@
         <div>
             <div class="row mx-0 mb-5">
                 <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">See our all Events</h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader will be
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader
+                    will be
                     distracted by the readable content of a page when looking.</p>
             </div>
             <div class="d-flex gap-3 eventCardContainer overflow-x-scroll">
             </div>
             <div class="d-flex justify-content-center mt-3">
-                <button class="btn border-0 eventLeftButton"><img src="http://127.0.0.1:3000/assets/home/events/leftArrow.png"
-                        alt="left arrow"></button>
-                <button class="btn border-0 eventRightButton"><img src="http://127.0.0.1:3000/assets/home/events/rightArrow.png"
-                        alt="right arrow"></button>
+                <button class="btn border-0 eventLeftButton"><img
+                        src="http://127.0.0.1:3000/assets/home/events/leftArrow.png" alt="left arrow"></button>
+                <button class="btn border-0 eventRightButton"><img
+                        src="http://127.0.0.1:3000/assets/home/events/rightArrow.png" alt="right arrow"></button>
             </div>
 
         </div>
@@ -317,24 +337,28 @@
         <div>
             <div class="row mx-0 my-5">
                 <h2 class="sectionHeading ps-3 col-12 col-sm-6 my-auto">Our latest articles</h2>
-                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader will be
+                <p class="col-12 col-sm-6 ms-auto mt-3 mt-sm-0 subHeading content">A long established fact that a reader
+                    will be
                     distracted by the readable content of a page when looking.A long established fact that.A long.</p>
             </div>
             <div class="d-flex flex-column flex-md-row gap-4 ">
                 <div class="position-relative">
                     <div class="articleImage">
-                        <img src="http://127.0.0.1:3000/assets/home/article/growing.png" alt="growing Together" class="w-100 h-100">
+                        <img src="http://127.0.0.1:3000/assets/home/article/growing.png" alt="growing Together"
+                            class="w-100 h-100">
                     </div>
                     <div class="p-4 d-flex flex-column gap-2 articleImageContent position-absolute rounded-3">
                         <h6>FEATURED</h6>
                         <h4 class="cardHeading">Growing Together in God's Word</h4>
-                        <p class="content">A long established fact that a reader will be distracted by the readable content of...</p>
+                        <p class="content">A long established fact that a reader will be distracted by the readable
+                            content of...</p>
                         <span>6 Mar,2023</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column justify-content-around gap-3 border p-4 rounded-3 ">
                     <h4 class="cardHeading">Subscribe to church</h4>
-                    <p class="content">A long established fact that a reader will be distracted by the readable.A long.</p>
+                    <p class="content">A long established fact that a reader will be distracted by the readable.A long.
+                    </p>
                     <input type="email" placeholder="Enter your email" class="p-2 churchSubscribeEmail">
                     <button class="btn btn-dark rounded-3 p-3 buttonWidth churchSubscribeButton"> Subscribe</button>
                     <div class="d-flex gap-3">
@@ -343,7 +367,19 @@
                     </div>
                 </div>
             </div>
-            <div class="mt-5 d-flex overflow-x-auto articleCardContainer gap-3"></div>
+            <div class="mt-5 d-flex overflow-x-auto articleCardContainer gap-3 mb-4"></div>
+            <nav aria-label="Page navigation example" class="d-flex justify-content-end ">
+                <ul class="pagination d-flex gap-2">
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item">
+                        <a class="page-link" aria-label="Next">
+                            <span aria-hidden="true">></span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </section>
 
     <section class="footer pb-3 mt-5"> </section>
