--- a/frontend/pages/aboutUs.html
+++ b/frontend/pages/aboutUs.html
@@ -11,13 +11,22 @@
 </head>
 
 <body>
+    <section class="navbarSection"> </section>
+
     <section class="container my-5">
+        <div class="col-12 d-flex justify-content-center gap-3 my-5 sectionChanger">
+            <span class="bold-content"> HOME</span>
+            <span class="bold-content"> > </span>
+            <span class="bold-content">PAGES</span>
+            <span class="bold-content"> > </span>
+            <span class="bold-content"> EVENTS </span>
+        </div>
         <div class="row">
             <div class="col-12 col-lg-6 mb-5 mb-lg-0">
                 <img src="http://127.0.0.1:3000/assets/aboutUs/hero/house.png" alt="house" class="w-100">
             </div>
             <div class="col-12 col-lg-4 mx-auto d-flex flex-column justify-content-around ">
-                <h2>About us</h2>
+                <h2 class="sectionHeading ps-3">About us</h2>
                 <div>
                     <p class="mb-4">There are many variations of passages of Lorem Ipsum available, but the majority
                         have suffered
@@ -37,36 +46,103 @@
                 <button class="btn btn-dark p-3 mt-3 mt-lg-0">Learn More</button>
             </div>
         </div>
-        <div class="heroStats d-flex justify-content-around bg-body-secondary p-5 my-5">
-            <div>
+        <div class="heroStats row px-3 px-sm-5 py-5 my-5">
+            <div class="col-6 col-sm-2 mb-4 mb-sm-0 mx-auto">
                 <h4>300+</h4>
                 <span>New volunteer</span>
             </div>
-            <div>
+            <div class="col-6 col-sm-2 mb-4 mb-sm-0 mx-auto">
                 <h4>88+</h4>
                 <span>Church Location</span>
             </div>
-            <div>
+            <div class="col-6 col-sm-3 ms-auto">
                 <h4>$86M+</h4>
                 <span>Managed donations</span>
             </div>
-            <div>
+            <div class="col-6 col-sm-2 mx-auto">
                 <h4>480+</h4>
                 <span>New member</span>
             </div>
         </div>
     </section>
-    <section class="container">
-        <div class="row m-0">
-            <h2 class="col-4">walking together,growing in faith</h2>
-            <p class="col-4">A long established fact that a reader will be distracted by the readable content of a page when looking.A
+
+    <section class="container pageMargin">
+        
+        <div class="row m-0 mb-5">
+            <h2 class="col-12 col-md-4 sectionHeading ps-3">walking together,growing in faith</h2>
+            <p class="col-12 col-md-6 ms-auto mt-3 mt-md-0">A long established fact that a reader will be distracted by
+                the readable content of
+                a page
+                when looking.A
                 long established fact that.A long.</p>
         </div>
+        <div class="d-flex flex-column flex-md-row gap-5">
+            <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
+                <div>
+                    <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/mission.png" alt="mission">
+                </div>
+                <div>
+                    <h4 class="cardTitle">Our mission</h4>
+                    <p class="content">A long established fact that a reader will be A long</p>
+                </div>
+            </div>
+            <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
+                <div>
+                    <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/vision.png" alt="mission">
+                </div>
+                <div>
+                    <h4 class="cardTitle">Our vision</h4>
+                    <p class="content">A long established fact that a reader will be A long</p>
+                </div>
+            </div>
+            <div class="growingFaithCard d-flex flex-column gap-4 rounded-3 py-4 px-3 text-center">
+                <div>
+                    <img src="http://127.0.0.1:3000/assets/aboutUs/growingFaith/passion.png" alt="mission">
+                </div>
+                <div>
+                    <h4 class="cardTitle">Our passion</h4>
+                    <p class="content">A long established fact that a reader will be A long</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="mt-5">
+
+        </div>
     </section>
+
+    <section class="container pageMargin">
+        <div class="row m-0">
+            <div class="col-12 col-md-6 col-lg-4 mx-auto mb-3 mb-md-0 position-relative ">
+                <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/book.png" alt="book" class="w-100 ">
+                <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/count.png" alt="count" class="position-absolute prayerCount">
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mx-auto d-flex flex-column justify-content-around">
+                <div class="position-relative">
+                    <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/1.png" alt="one" class="position-absolute happyPrayersNumber d-none d-sm-block d-md-none d-lg-block">
+                    <h4 class="cardHeading">Who Are we</h4>
+                    <p class="content">A long established fact that a reader will be A long established fact that a reader.</p>
+                </div>
+                <div class="position-relative">
+                    <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/2.png" alt="two" class="position-absolute happyPrayersNumber d-none d-sm-block d-md-none d-lg-block">
+                    <h4 class="cardHeading">What we believe</h4>
+                    <p class="content">A long established fact that a reader will be A long established fact that a reader will be distracted.</p>
+                </div>
+                <div class="position-relative">
+                    <img src="http://127.0.0.1:3000/assets/aboutUs/happyPrayers/3.png" alt="three" class="position-absolute happyPrayersNumber d-none d-sm-block d-md-none d-lg-block">
+                    <h4 class="cardHeading">our community</h4>
+                    <p class="content">A long established fact that a reader will be A long established fact that a reader will be distracted.A long established fact that a reader.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer pb-3 mt-5"> </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="../js/aboutUS.js" type="module"></script>
 </body>
 
 </html>
